# sieve-extdata-plugin

./: .gitignore  .hgignore  AUTHORS  INSTALL  Makefile.am  README  autogen.sh  configure.ac  configure.in  sieve-extdata-config.h  sieve-extdata-config.h.in
doc/: Makefile.am
doc/rfc/: spec-bosch-sieve-external-data.txt
doc/rfc/xml/: spec-bosch-sieve-external-data.xml
m4/: pigeonhole.m4
src/: Makefile.am  ext-extdata-common.c  ext-extdata-common.h  ext-extdata-variables.c  ext-extdata-variables.h  ext-extdata.c  sieve-extdata-plugin.c  sieve-extdata-plugin.h  tst-extdata.c
tests/: extdata-namespace.svtest  extdata-test.svtest  values.dict
