AC_INIT([Pigeonhole Sieve Extdata plugin], [0.1.0], [dovecot@dovecot.org], [pigeonhole-0.3-sieve-extdata])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([no-define foreign])

# Autoheader is not needed and does more harm than good for this package. However, it is 
# tightly integrated in autoconf/automake and therefore it is difficult not to use it. As 
# a workaround we give autoheader a dummy config header to chew on and we handle the 
# real config header ourselves.
AC_CONFIG_HEADERS([dummy-config.h sieve-extdata-config.h])

AC_DEFINE_UNQUOTED(SIEVE_EXTDATA_NAME, "$PACKAGE_NAME", 
	[Define to the full name of this plugin implementation.])
AC_DEFINE_UNQUOTED(SIEVE_EXTDATA_VERSION, "$PACKAGE_VERSION", 
	[Define to the version of this plugin implementation.])

AM_MAINTAINER_MODE

AC_PROG_LIBTOOL

DC_PIGEONHOLE

AC_CONFIG_FILES([
Makefile
src/Makefile
stamp.h])

AC_OUTPUT
